--- a/requirements.txt
+++ b/requirements.txt
@@ -18,22 +18,31 @@ grpcio==1.30.0
 idna==2.10
 importlib-metadata==1.6.1
 ipykernel==5.3.0
+ipython==7.16.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.0
 Jinja2==2.11.2
 joblib==0.16.0
+json5==0.9.5
 jsonschema==3.2.0
+jupyter==1.0.0
 jupyter-client==6.1.3
 jupyter-console==6.1.0
 jupyter-core==4.6.3
+jupyterlab==2.1.5
+jupyterlab-server==1.2.0
 kiwisolver==1.2.0
+llvmlite==0.33.0
 Markdown==3.2.2
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mistune==0.8.4
+more-itertools==8.4.0
 nbconvert==5.6.1
 nbformat==5.0.7
+notebook==6.0.3
+numba==0.50.1
 numpy==1.18.5
 oauthlib==3.1.0
 packaging==20.4
@@ -43,28 +52,34 @@ parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.1.2
+pluggy==0.13.1
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 protobuf==3.12.2
 ptyprocess==0.6.0
+py==1.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
+pytest==5.4.3
 python-dateutil==2.8.1
 pytz==2020.1
+PyYAML==5.3.1
 pyzmq==19.0.1
 qtconsole==4.7.4
 QtPy==1.9.0
 requests==2.24.0
 requests-oauthlib==1.3.0
+resampy==0.2.2
 rsa==4.6
 scikit-learn==0.23.1
 scipy==1.5.0
 Send2Trash==1.5.0
 six==1.15.0
+SoundFile==0.10.3.post1
 tensorboard==2.2.2
 tensorboard-plugin-wit==1.7.0
 terminado==0.8.3
