--- a/requirements.txt
+++ b/requirements.txt
@@ -12,15 +12,19 @@ cffi==1.14.0
 chardet==3.0.4
 cloudpickle==1.5.0
 cycler==0.10.0
+daemonize==2.5.0
 decorator==4.4.2
 defusedxml==0.6.0
+distlib==0.3.1
 e==1.4.5
 entrypoints==0.3
+filelock==3.0.12
 future==0.18.2
 gast==0.3.3
 google-auth==1.18.0
 google-auth-oauthlib==0.4.1
 grpcio==1.30.0
+guildai==0.7.0.post1
 h5py==2.10.0
 idna==2.10
 imageio==2.9.0
@@ -70,9 +74,10 @@ pandas==1.0.5
 pandocfilters==1.4.2
 parso==0.7.0
 pexpect==4.8.0
-# philharmonia-dataset @ file:///Users/hugoffg/Documents/lab/philharmonia-dataset
+philharmonia-dataset @ file:///Users/hugoffg/Documents/lab/philharmonia-dataset
 pickleshare==0.7.5
 Pillow==7.1.2
+pkginfo==1.5.0.1
 plotly==4.9.0
 pluggy==0.13.1
 pooch==1.1.1
@@ -82,6 +87,7 @@ prompt-toolkit==3.0.5
 protobuf==3.12.2
 ptyprocess==0.6.0
 py==1.9.0
+pyaml==20.4.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
@@ -108,14 +114,16 @@ resampy==0.2.2
 retrying==1.3.3
 rsa==4.6
 scikit-image==0.14.5
-scikit-learn==0.23.1
+scikit-learn==0.22.2.post1
+scikit-optimize==0.7.4
 scipy==1.5.0
 seaborn==0.10.1
 Send2Trash==1.5.0
 six==1.15.0
 snowballstemmer==2.0.0
 SoundFile==0.10.3.post1
-tensorboard==1.13.1
+tabview==1.4.4
+tensorboard==2.2.2
 tensorboard-plugin-wit==1.7.0
 tensorflow==1.13.2
 tensorflow-estimator==1.13.0
@@ -131,6 +139,7 @@ tqdm==4.48.0
 traitlets==4.3.3
 umap-learn==0.4.6
 urllib3==1.25.9
+virtualenv==20.0.31
 wcwidth==0.2.4
 webencodings==0.5.1
 Werkzeug==1.0.1
